--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,11 @@ updates:
       interval: "weekly"
     cooldown:
       default-days: 3
+    groups:
+      non-major:
+        update-types:
+          - "minor"
+          - "patch"
 
   - package-ecosystem: "docker"
     directory: "/source/AAS.TwinEngine.DataEngine"
