--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ name: Docker
 
 on:
   schedule:
-    - cron: '31 9 * * *'
+    - cron: '31 22 * * *'
   push:
     branches: [ "main" ]
     # Publish semver tags as releases.
@@ -68,6 +68,11 @@ jobs:
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=schedule,enable=true,priority=1000,pattern=nightly
+            type=semver,pattern={{version}}
+            type=ref,event=branch
+            type=ref,event=pr
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
