--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -68,12 +68,14 @@ jobs:
         uses: docker/metadata-action@c299e40c65443455700f0fdfc63efafe5b349051 # v5.10.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          flavor: |
+            latest=false
           tags: |
             type=schedule,enable=true,priority=1000,pattern=nightly
             type=semver,pattern={{version}}
             type=ref,event=branch
             type=ref,event=pr
-            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') && github.event.base_ref == 'release-v1.0' }}
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v1.0.')}}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
