--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -84,6 +84,7 @@ jobs:
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
           sbom: true
+          provenance: mode=max
           context: ./source
           file: source/AAS.TwinEngine.DataEngine/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
