--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -75,7 +75,7 @@ jobs:
             type=semver,pattern={{version}}
             type=ref,event=branch
             type=ref,event=pr
-            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v1.0.')}}
+            type=raw,value=latest,enable=${{ startsWith(github.ref, format('refs/tags/{0}', vars.VERSION_PATTERN))}}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
