--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,7 +14,10 @@ on:
     tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ "main", "release-*" ]
-
+    
+permissions:
+  contents: read
+  
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
