--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -83,9 +83,9 @@ jobs:
             NCSA,
             X11,
             Xerox,
-
             BlueOak-1.0.0,
             CC-BY-4.0,
+            InnoSetup,
             MS-PL,
             PostgreSQL,
             Python-2.0,
