--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ permissions:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  IMAGE_NAME: DataEngine
+  IMAGE_NAME: ${{ github.repository_owner }}/DataEngine
   DOCKERFILE_PATH: source/AAS.TwinEngine.DataEngine/Dockerfile
   BUILD_CONTEXT: source
 
