--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,17 +8,19 @@ name: Docker
 on:
   push:
     branches: 
-      - 'main'
+      # - 'main'
       - 'develop'
+      - 'release/**'
+      - 'hotfix/**'
+    # Publish semver tags as releases.
+    tags: [ 'v*.*.*' ]
+  # pull_request:
+  #   branches: 
+  #     - 'main'
+  #     - 'develop'
+  #     - 'release/**'
+  #     - 'hotfix/**'
 
-  pull_request:
-    branches:
-      - 'main'
-      - 'develop'
-    
-permissions:
-  contents: read
-  
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
@@ -43,13 +45,13 @@ jobs:
       # multi-platform images and export cache
       # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.1
+        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -65,8 +67,14 @@ jobs:
           flavor: |
             latest=false
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
+            type=semver,pattern={{raw}}
+            type=raw,value=latest,enable=${{startsWith(github.ref, 'refs/tags/v')}}
+            type=raw,value=develop,enable=${{startsWith(github.ref, 'refs/heads/develop')}}
+            type=raw,value=develop-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/develop')}}
+            type=raw,value=release-candidate-{{replace(github.ref, 'refs/heads/release/', '')}}-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/release/')}}
+            type=raw,value=hotfix-{{replace(github.ref, 'refs/heads/hotfix/', '')}}-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/hotfix/')}}
+            type=raw,value=feature-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/feature/')}}
+
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
