--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,6 +12,7 @@ on:
       - 'develop'
       - 'release/**'
       - 'hotfix/**'
+      - 'feature/**'
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   # pull_request:
