--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -72,8 +72,8 @@ jobs:
             type=raw,value=latest,enable=${{startsWith(github.ref, 'refs/tags/v')}}
             type=raw,value=develop,enable=${{startsWith(github.ref, 'refs/heads/develop')}}
             type=raw,value=develop-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/develop')}}
-            type=raw,value=release-candidate-{{replace(github.ref, 'refs/heads/release/', '')}}-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/release/')}}
-            type=raw,value=hotfix-{{replace(github.ref, 'refs/heads/hotfix/', '')}}-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/hotfix/')}}
+            type=raw,value=release-candidate-${{replace(github.ref, 'refs/heads/release/', '')}}-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/release/')}}
+            type=raw,value=hotfix-${{replace(github.ref, 'refs/heads/hotfix/', '')}}-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/hotfix/')}}
             type=raw,value=feature-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/feature/')}}
 
 
