--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,7 +14,7 @@ on:
       - 'hotfix/**'
       - 'feature/**'
     # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
+    tags: [ 'v**' ]
   # pull_request:
   #   branches: 
   #     - 'main'
