--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -72,7 +72,7 @@ jobs:
             type=raw,value=latest,enable=${{startsWith(github.ref, 'refs/tags/v')}}
             type=raw,value=develop,enable=${{startsWith(github.ref, 'refs/heads/develop')}}
             type=raw,value=develop-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/develop')}}
-            type=raw,value={{branch}}-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/release/')}}
+            type=raw,value={{branch}}-candidate-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/release/')}}
             type=raw,value={{branch}}-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/hotfix/')}}
             type=raw,value=feature-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/feature/')}}
 
