--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,15 +12,13 @@ on:
       - 'develop'
       - 'release/**'
       - 'hotfix/**'
-      - 'feature/**'
     # Publish semver tags as releases.
     tags: [ 'v**' ]
-  # pull_request:
-  #   branches: 
-  #     - 'main'
-  #     - 'develop'
-  #     - 'release/**'
-  #     - 'hotfix/**'
+  pull_request:
+    branches: 
+      - 'main'
+      - 'release/**'
+      - 'hotfix/**'
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -69,12 +67,9 @@ jobs:
             latest=false
           tags: |
             type=semver,pattern={{raw}}
-            type=raw,value=latest,enable=${{startsWith(github.ref, 'refs/tags/v')}}
-            type=raw,value=develop,enable=${{startsWith(github.ref, 'refs/heads/develop')}}
             type=raw,value=develop-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/develop')}}
-            type=raw,value={{branch}}-candidate-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/release/')}}
+            type=raw,value=rc-{{branch}}-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/release/')}}
             type=raw,value={{branch}}-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/hotfix/')}}
-            type=raw,value=feature-{{sha}},enable=${{startsWith(github.ref, 'refs/heads/feature/')}}
 
 
       # Build and push Docker image with Buildx (don't push on PR)
