--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,12 +12,12 @@ on:
       - 'develop'
       - 'release/**'
       - 'hotfix/**'
-      - 'feature/**'
     # Publish semver tags as releases.
     tags: [ 'v**' ]
   pull_request:
     branches: 
       - 'main'
+      - 'develop'
       - 'release/**'
       - 'hotfix/**'
 
