Add validation for PRs targeting the main branch to enforce branch naming conventions

--- a/.github/workflows/PR-validator.yml
+++ b/.github/workflows/PR-validator.yml
@@ -4,13 +4,32 @@ on:
   pull_request:
     branches:
       - develop
+      - main
 
 jobs:
   validate:
     runs-on: ubuntu-latest
 
     steps:    
-    - name: Run validation
+    - name: Validate PR to main
+      if: github.base_ref == 'main'
+      run: |
+        SOURCE_BRANCH="${{ github.head_ref }}"
+        echo "PR Source Branch: $SOURCE_BRANCH"
+        echo "PR Target Branch: ${{ github.base_ref }}"
+        
+        # Check if branch matches release/v{major}.{minor}.{patch} or hotfix/v{major}.{minor}.{patch}
+        if [[ ! "$SOURCE_BRANCH" =~ ^(release|hotfix)/v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          echo "ERROR: PRs to main are only allowed from branches matching:"
+          echo "  - release/v{major}.{minor}.{patch}"
+          echo "  - hotfix/v{major}.{minor}.{patch}"
+          echo "Example: release/v1.2.3 or hotfix/v1.2.4"
+          exit 1
+        fi
+
+        echo "✓ Branch validation passed"
+    
+    - name: Print PR info
       run: |
         echo "PR Source Branch: ${{ github.head_ref }}"
         echo "PR Target Branch: ${{ github.base_ref }}"
