--- a/.github/workflows/PR-validator.yml
+++ b/.github/workflows/PR-validator.yml
@@ -35,4 +35,4 @@ jobs:
         echo "PR Target Branch: ${{ github.base_ref }}"
         echo "From: ${{ github.head_ref }} -> To: ${{ github.base_ref }}"
 
-        echo "PR Reviewers:" ${{ github.event.pull_request.number }}
+        echo "PR Reviewers:" ${{ github.event.pull_request.requested_reviewers  }}
